--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "pypy"
+env:
+  - TOX_ENV=py26
+  - TOX_ENV=py27
+  - TOX_ENV=pypy
 install: pip install . --allow-external argparse
-script: nosetests
+script: tox -e $TOX_ENV
