--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,5 @@ envlist = py27
 [testenv]
 deps = nose
 commands =
-    pip install google_apitools[testing]
+    pip install google-apitools[testing]
     nosetests
