Temporary fix for ez_setup issue.

--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,6 @@ envlist = py27
 [testenv]
 deps = nose
 commands =
+    pip install ez_setup # temporary
     pip install google-apitools[testing]
     nosetests
