Removing [testing] optional tests from Python 3.

--- a/tox.ini
+++ b/tox.ini
@@ -6,3 +6,19 @@ deps = nose
 commands =
     pip install google-apitools[testing]
     nosetests
+
+[testenv:py33]
+basepython = python3.3
+deps =
+    mock
+    nose
+    unittest2
+commands = nosetests
+
+[testenv:py34]
+basepython = python3.4
+deps =
+    mock
+    nose
+    unittest2
+commands = nosetests
