Adding tox test coverage rule.
- Adding badge in README
- Adding after_success rule to run test coverage in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ install:
   - pip install tox
   - pip install . --allow-external argparse
 script: tox -e $TOX_ENV
+after_success:
+  - tox -e coveralls
