--- a/tox.ini
+++ b/tox.ini
@@ -22,3 +22,25 @@ deps =
     nose
     unittest2
 commands = nosetests
+
+[testenv:cover]
+basepython =
+    python2.7
+commands =
+    nosetests --with-xunit --with-xcoverage --cover-package=apitools --nocapture --cover-erase --cover-tests --cover-branches
+deps =
+    google-apputils
+    mock
+    nose
+    unittest2
+    coverage
+    nosexcover
+
+[testenv:coveralls]
+basepython = {[testenv:cover]basepython}
+commands =
+    {[testenv:cover]commands}
+    coveralls
+deps =
+    {[testenv:cover]deps}
+    coveralls
