--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py26,py27,pypy,py33,py34
 [testenv]
 deps = nose
 commands =
-    pip install google-apitools[testing]
+    pip install -e .[testing] -q --log={envlogdir}/pip-extra-install.log
     nosetests
 
 [testenv:py33]
