--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ distribute-*
 .coverage
 coverage.xml
 nosetests.xml
+
+# Make sure a generated file isn't accidentally committed.
+reduced.pylintrc
