--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,21 @@ deps =
     unittest2
 commands = nosetests
 
+[pep8]
+exclude = samples/storage_sample/storage,samples/storage_sample/testdata,*.egg/,.*/,ez_setup.py
+verbose = 1
+
+[testenv:lint]
+basepython =
+    python2.7
+commands =
+    pep8
+    python run_pylint.py
+deps =
+    pep8
+    pylint
+    unittest2
+
 [testenv:cover]
 basepython =
     python2.7
