Add in the apitools mock framework.
This includes a framework for easily mocking an apitools client, originally
written by @skelterjohn.

--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,7 @@ commands =
     nosetests --with-xunit --with-xcoverage --cover-package=apitools --nocapture --cover-erase --cover-tests --cover-branches
 deps =
     google-apputils
+    python-gflags
     mock
     nose
     unittest2
