--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: python
 env:
+  - TOX_ENV=py26
   - TOX_ENV=py27
-  - TOX_ENV=pypy
   - TOX_ENV=py34
+  - TOX_ENV=pypy
+  - TOX_ENV=lint
 install:
   - pip install tox
   - pip install . --allow-external argparse
