Add a hook for command-line args in tox.
This allows us to call `tox -e py27 -- foo.bar` and test just `foo.bar`.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py26,py27,pypy,py33,py34,lint,cover
 deps = nose
 commands =
     pip install google-apitools[testing]
-    nosetests
+    nosetests []
 
 [testenv:py33]
 basepython = python3.3
@@ -13,7 +13,7 @@ deps =
     mock
     nose
     unittest2
-commands = nosetests
+commands = nosetests []
 
 [testenv:py34]
 basepython = python3.4
@@ -21,7 +21,7 @@ deps =
     mock
     nose
     unittest2
-commands = nosetests
+commands = nosetests []
 
 [pep8]
 exclude = samples/storage_sample/storage,samples/storage_sample/testdata,*.egg/,.*/,ez_setup.py
@@ -42,7 +42,7 @@ deps =
 basepython =
     python2.7
 commands =
-    nosetests --with-xunit --with-xcoverage --cover-package=apitools --nocapture --cover-erase --cover-tests --cover-branches
+    nosetests --with-xunit --with-xcoverage --cover-package=apitools --nocapture --cover-erase --cover-tests --cover-branches []
 deps =
     google-apputils
     python-gflags
