--- a/tox.ini
+++ b/tox.ini
@@ -32,8 +32,9 @@ verbose = 1
 basepython =
     python2.7
 commands =
+    pip install six google-apitools[testing]
     pep8
-    python run_pylint.py master
+    python run_pylint.py
 deps =
     pep8
     pylint
