Add a tox+travis env with an older oauth2client.
We can drop this in a few months, when oauth2client2 is safe to assume.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,pypy,py34,py35,lint,cover
+envlist = py26,py27,pypy,py34,py35,lint,cover,py27oldoauth2client
 
 [testenv]
 deps = nose
@@ -7,6 +7,12 @@ commands =
     pip install google-apitools[testing]
     nosetests []
 passenv = TRAVIS*
+
+[testenv:py27oldoauth2client]
+commands =
+    pip install oauth2client==1.5.2
+    {[testenv]commands}
+deps = {[testenv]deps}
 
 [testenv:py34]
 basepython = python3.4
