--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 env:
   - TOX_ENV=py26
   - TOX_ENV=py27
+  - TOX_ENV=py27oldoauth2client
   - TOX_ENV=py34
   - TOX_ENV=py35
   - TOX_ENV=pypy
