Fix lint issues.

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps =
 commands = nosetests []
 
 [pep8]
-exclude = samples/storage_sample/storage,samples/storage_sample/testdata,*.egg/,*.egg-info/,.*/,ez_setup.py,build
+exclude = samples/storage_sample/storage,*/testdata/*,*.egg/,*.egg-info/,.*/,ez_setup.py,build
 verbose = 1
 
 [testenv:lint]
