Update client to accommodate oauth2client>=4.0
This changes has been needed for a while now. The main blocker
seems to be the use of locked_file for caching GCE credentials.
I've added a simple multiprocess lockable file cache that uses
a similar approach to that used in ouath2client's multiprocess
file storage.

Submission of this should close issue #162.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ sudo: false
 env:
   - TOX_ENV=py27
   - TOX_ENV=py27oldoauth2client
+  - TOX_ENV=py27newoauth2client
   - TOX_ENV=py34
-  - TOX_ENV=py35
+  - TOX_ENV=py35oauth2client15
+  - TOX_ENV=py35oauth2client30
+  - TOX_ENV=py35oauth2client41
   - TOX_ENV=lint
 install:
   - pip install tox
