--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,16 @@
 [tox]
-envlist = py26,py27,pypy,py34,py35,lint,cover,py27oldoauth2client
+envlist =
+    py26
+    py27
+    py27oldoauth2client
+    py27newoauth2client
+    pypy
+    py34
+    py35oauth2client15
+    py35oauth2client30
+    py35oauth2client41
+    lint
+    cover
 
 [testenv]
 deps =
@@ -9,6 +20,12 @@ commands =
     pip install google-apitools[testing]
     nosetests []
 passenv = TRAVIS*
+
+[testenv:py27newoauth2client]
+commands =
+    pip install oauth2client==4.1.0
+    {[testenv]commands}
+deps = {[testenv]deps}
 
 [testenv:py27oldoauth2client]
 commands =
@@ -23,6 +40,36 @@ deps =
     nose
     unittest2
 commands = nosetests []
+
+[testenv:py35oauth2client15]
+basepython = python3.5
+deps =
+    mock
+    nose
+    unittest2
+commands =
+    pip install oauth2client==1.5.2
+    nosetests []
+
+[testenv:py35oauth2client30]
+basepython = python3.5
+deps =
+    mock
+    nose
+    unittest2
+commands =
+    pip install oauth2client==3.0.0
+    nosetests []
+
+[testenv:py35oauth2client41]
+basepython = python3.5
+deps =
+    mock
+    nose
+    unittest2
+commands =
+    pip install oauth2client==4.1.0
+    nosetests []
 
 [testenv:py35]
 basepython = python3.5
