Update test runner setup

--- a/tox.ini
+++ b/tox.ini
@@ -1,94 +1,30 @@
 [tox]
 envlist =
-    py26
-    py27
-    py27oldoauth2client
-    py27newoauth2client
-    pypy
-    py34
-    py35oauth2client15
-    py35oauth2client30
-    py35oauth2client41
-    lint
-    cover
+    py26-oauth2client4
+    py27-oauth2client{1,2,3,4}
+    py33-oauth2client41
+    py34-oauth2client41
+    py35-oauth2client{1,2,3,4}
 
 [testenv]
 deps =
     nose
     python-gflags==3.0.6
+    oauth2client1: oauth2client<1.5dev
+    oauth2client2: oauth2client>=2,<=3dev
+    oauth2client3: oauth2client>=3,<=4dev
+    oauth2client4: oauth2client>=4,<=5dev
 commands =
     pip install google-apitools[testing]
     nosetests []
 passenv = TRAVIS*
-
-[testenv:py27newoauth2client]
-commands =
-    pip install oauth2client==4.1.0
-    {[testenv]commands}
-deps = {[testenv]deps}
-
-[testenv:py27oldoauth2client]
-commands =
-    pip install oauth2client==1.5.2
-    {[testenv]commands}
-deps = {[testenv]deps}
-
-[testenv:py34]
-basepython = python3.4
-deps =
-    mock
-    nose
-    unittest2
-commands = nosetests []
-
-[testenv:py35oauth2client15]
-basepython = python3.5
-deps =
-    mock
-    nose
-    unittest2
-commands =
-    pip install oauth2client==1.5.2
-    nosetests []
-
-[testenv:py35oauth2client30]
-basepython = python3.5
-deps =
-    mock
-    nose
-    unittest2
-commands =
-    pip install oauth2client==3.0.0
-    nosetests []
-
-[testenv:py35oauth2client41]
-basepython = python3.5
-deps =
-    mock
-    nose
-    unittest2
-commands =
-    pip install oauth2client==4.1.0
-    nosetests []
-
-[testenv:py35]
-basepython = python3.5
-deps =
-    mock
-    nose
-    unittest2
-commands = nosetests []
-
-[pep8]
-exclude = samples/*_sample/*/*,*/testdata/*,*.egg/,*.egg-info/,.*/,ez_setup.py,build
-verbose = 1
 
 [testenv:lint]
 basepython =
     python2.7
 commands =
     pip install six google-apitools[testing]
-    pep8
+    pep8 apitools
     python run_pylint.py
 deps =
     pep8
