Fix lint errors in apitools.
This makes a few updates to get the linter happy:

* drop oauth2l and oauth2l_test
* add some newlines
* fix formatting in two error messages
* switch `pep8` -> `pycodestyle`
* drop the custom pylintrc and `run_pylint`.

The "have a custom system for pylint" seemed like a good idea long ago, but
python linting tools have come far enough that it's more work than it's worth.

--- a/tox.ini
+++ b/tox.ini
@@ -23,11 +23,10 @@ passenv = TRAVIS*
 basepython =
     python2.7
 commands =
-    pip install six google-apitools[testing]
-    pep8 apitools
-    python run_pylint.py
+    pip install six google-apitools
+    pycodestyle apitools
 deps =
-    pep8
+    pycodestyle
     pylint
     unittest2
 
