--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist =
 [testenv]
 deps =
     nose
-    python-gflags==3.0.6
+    python-gflags
     oauth2client1: oauth2client<1.5dev
     oauth2client2: oauth2client>=2,<=3dev
     oauth2client3: oauth2client>=3,<=4dev
@@ -36,8 +36,7 @@ basepython =
 commands =
     nosetests --with-xunit --with-xcoverage --cover-package=apitools --nocapture --cover-erase --cover-tests --cover-branches []
 deps =
-    google-apputils
-    python-gflags==3.0.6
+    python-gflags
     mock
     nose
     unittest2
