--- a/tox.ini
+++ b/tox.ini
@@ -21,12 +21,15 @@ passenv = TRAVIS*
 
 [testenv:lint]
 basepython =
-    python2.7
+    python3.5
 commands =
     pip install six google-apitools
-    pycodestyle apitools
+    # stop the build if there are Python syntax errors or undefined names
+    flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+    # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+    flake8 . --count --exit-zero --max-complexity=10 --statistics
 deps =
-    pycodestyle==2.4.0
+    flake8==3.6.0
     pylint
     unittest2
 
