--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ commands =
     pip install six google-apitools
     pycodestyle apitools
 deps =
-    pycodestyle
+    pycodestyle==2.4.0
     pylint
     unittest2
 
