--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ matrix:
   - python: "3.5"
     env: TOX_ENV=py35-oauth2client4
 install:
+  # See https://github.com/aws/base64io-python/issues/4#issuecomment-397857642
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.3 ]]; then pip install virtualenv==15.2.0; fi
   - pip install tox
   - pip install . --allow-external argparse
 script: tox -e $TOX_ENV
