--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   # See https://github.com/aws/base64io-python/issues/4#issuecomment-397857642
   - if [[ $TRAVIS_PYTHON_VERSION == 3.3 ]]; then pip install virtualenv==15.2.0; fi
   - pip install tox
-  - pip install . --allow-external argparse
+  - pip install . argparse
 script: tox -e $TOX_ENV
 after_success:
   - if [[ "${TOX_ENV}" == "py27-oauth2client4" ]]; then tox -e coveralls; fi
